--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "twind:dev": "npx tailwindcss -i ./public/css/input.css -o ./public/css/style.css --watch"
   },
   "keywords": [],
   "author": "",
