--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "cypress": "^15.5.0",
     "tailwindcss": "^3.4.17"
   }
 }
