--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "type": "commonjs",
   "devDependencies": {
     "cypress": "^15.5.0",
+    "cypress-mochawesome-reporter": "^4.0.2",
     "tailwindcss": "^3.4.17"
   }
 }
